2005-02-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Fixed a minor typo that was causing the linking of
	both glib 1.2.x and glib 2.x into the same executable.  This caused
	gschem and friends to segfault upon startup.

2005-02-23  Carlos Nieves Onega <cnieves@iespana.es>

	* configure.ac, noweb/o_picture.nw:
	Added temporary GDK dependency. Fixed CLI compilation error
	when gdk_init was not found when linking.
	
2005-02-22  Carlos Nieves Onega <cnieves@iespana.es>

        * noweb/o_picture.nw: Fix character conversion.
	
        * noweb/o_picture.nw: Initialize GDK if it's a non-graphical app.
	
2005-02-21 05:38  Dan McMahill <danmc>

	* configure.ac, src/Makefile.am: if we are using gcc, add -Wall

2005-02-21 03:58  Dan McMahill <danmc>

	* autogen.sh: avoid using the '-path' primary to find(1) as it's an
	  extension to posix.2 and is not supported on some operating
	  systems such as solaris.  Now we can autogen.sh on solaris 9.

2005-02-21 03:04  Dan McMahill <danmc>

	* noweb/: f_image.nw, g_rc.nw, o_picture.nw, o_text_basic.nw: fix
	  some format string/type mismatches, format string/# of arg
	  mismatches, /* within comments, unused variables, and undeclared
	  variable bugs.

2005-02-20  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/s_clib.nw: Added a missing include of defines.h required for 
	s_log_message().
	
	* include/defines.h (s_log_message): Added macro for message logging.
	
	* noweb/s_log.nw: Rewritten to use GLib's message logging.

2005-02-19  Carlos Nieves Onega <cnieves@iespana.es>

        * configure.ac, include/funcs.h, include/libgeda.h, 
	  include/o_types.h, include/prototype.h, include/struct.h,
	  noweb/Makefile.am, noweb/a_basic.nw, noweb/f_image.nw,
	  noweb/f_print.nw, noweb/gdk-pixbuf-hacks.nw, noweb/o_attrib.nw,
	  noweb/o_basic.nw, noweb/o_complex_basic.nw, noweb/o_list.nw,
	  noweb/o_picture.nw, noweb/s_basic.nw, noweb/s_toplevel.nw,
	  src/Makefile.am:
	  Added picture support.
	