@@ -1,8 +1,8 @@
 
-EXTRA_DIST = 	geda_totexi.in prepnoweb notangle_guile.scm.in
+EXTRA_DIST = 	geda_totexi.in prepnoweb notangle_guile.in
 
 MOSTLYCLEANFILES = 	*.log *~
 CLEANFILES = 		*.log *~
 DISTCLEANFILES = 	*.log core FILE *~ prototype.bak \
-			geda_totexi notangle_guile.scm
+			geda_totexi notangle_guile
 MAINTAINERCLEANFILES = 	*.log *~ Makefile.in configure
